# cmake_template

./: .gitignore  .nvim_project  CMakeLists.txt  README.md
build_scripts/: linux_Debug.sh  linux_MinSizeRel.sh  linux_RelWithDebInfo.sh  linux_Release.sh
cmake/: add_define.cmake  add_defines.cmake  add_target.cmake  add_targets.cmake  check.cmake  common.cmake  config.cmake  feature.cmake  main.cmake  target.cmake  tests.cmake  utils.cmake
projects/dyn_main/: CMakeLists.txt
projects/dyn_main/inc/dyn_main/: dyn_main.h  export.h
projects/dyn_main/src/dyn_main/: dyn_main.c
projects/dyn_main/src/dyn_main_linux/: linux.c
projects/main/: CMakeLists.txt
projects/main/inc/main/: main.h
projects/main/inc/main/allocators/: allocator.h  linear.h
projects/main/inc/main/collections/: dyn_array.h  linked_list.h  str_ascii.h
projects/main/inc/main/compiler/: lexer.h
projects/main/inc/main/core/: core.h
projects/main/inc/main/json/: serializer.h
projects/main/res/: test.json
projects/main/src/main/allocators/: linear.c  old_linear.c
projects/main/src/main/collections/: dyn_array.c  linked_list.c  str_ascii.c
projects/main/src/main/compiler/: lexer.c
projects/main/src/main/json/: serializer.c
projects/main/tests/: CMakeLists.txt  dyn_array.c  linked_list.c  serializer.c  str_ascii.c
projects/p04_coll/: CMakeLists.txt
projects/p04_coll/src/p04_coll/: array.c  array.h  collections.h  main.c
projects/project01/: CMakeLists.txt
projects/project01/tests/: first_test.c
projects/project02/: CMakeLists.txt
projects/project02/src/project02/: project02.c
projects/project03/: CMakeLists.txt
projects/soco/: CMakeLists.txt
projects/soco/inc/soco/: array.h  collections.h  export.h  iterator.h  soco.h  span.h
projects/soco/inc/soco/allocators/: allocator.h  heap.h
projects/soco/inc/soco/collections/: array.h  collection.h  iterator.h  span.h
projects/soco/src/soco/: array.c  soco.c
projects/soco/src/soco/allocators/: heap.c
projects/soco/src/soco/collections/: array.c  collection.c
projects/soco/tests/: CMakeLists.txt  first_soco_test.c  soco_array_test.c
projects/soco_dsa/: CMakeLists.txt
projects/soco_dsa/inc/soco_dsa/: export.h  soco_dsa.h
projects/soco_dsa/inc/soco_dsa/algo/: algo.h
projects/soco_dsa/inc/soco_dsa/allocators/: allocator.h  heap.h
projects/soco_dsa/inc/soco_dsa/collections/: array.h  collection.h  iterator.h  span.h
projects/soco_dsa/src/soco_dsa/: soco_dsa.c
projects/soco_dsa/src/soco_dsa/algo/: algo.c
projects/soco_dsa/src/soco_dsa/allocators/: heap.c
projects/soco_dsa/src/soco_dsa/collections/: array.c
projects/soco_dsa/tests/: CMakeLists.txt  first_soco_test.c  soco_array_test.c  soco_dsa_algo_test.c
projects/use_main/: CMakeLists.txt
projects/use_main/src/use_main/: main.c
projects/use_main/src/use_main/fea/: common_file.h
projects/use_main/src/use_main_linux/: linux_file.c
